# Skypro_Course_4_Datastruct

./: README.md  pyproject.toml
datastruct/: linked_list.py  node.py  queue.py  stack.py
tests/: test_linked_list.py  test_node.py  test_queue.py  test_stack.py
